force-app/main/default/objects/sugati__Trigger_Setting__c/sugati__Trigger_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Setting</label>
</CustomObject>