force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Client_Payment_Ignore_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__Client_Payment_Ignore_Status__c</fullName>
    <defaultValue>&quot;Booking cancelled&quot;</defaultValue>
    <inlineHelpText>when client payment update, these status should not be changed.</inlineHelpText>
    <label>Client Payment Ignore Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>