force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Client_Payment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Client_Payment_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Client Payment Trigger</label>
    <type>Checkbox</type>
</CustomField>