force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Create_Invoice_for_Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Create_Invoice_for_Client_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Invoice for Client Payment</label>
    <type>Checkbox</type>
</CustomField>