force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Do_Not_Create_Add_CPD__c.field-meta.xml
<CustomField>
    <fullName>sugati__Do_Not_Create_Add_CPD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System by default creates a Client Payment &amp; Detail record for each Client Payment record. By checking this box you can stop it.</inlineHelpText>
    <label>Do Not Create Add CPD</label>
    <type>Checkbox</type>
</CustomField>