force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Group_MembersTrigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Group_MembersTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group MembersTrigger</label>
    <type>Checkbox</type>
</CustomField>