force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__runRuleTrigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__runRuleTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runRuleTrigger</label>
    <type>Checkbox</type>
</CustomField>