force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Supplier_Booking_Trigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Booking_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Booking Trigger</label>
    <type>Checkbox</type>
</CustomField>