force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Travelling_Country_Trigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Travelling_Country_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travelling Country Trigger</label>
    <type>Checkbox</type>
</CustomField>