force-app/main/default/objects/sugati__Trigger_Setting__c/fields/sugati__Unlock_Opportunit_approver_profile__c.field-meta.xml
<CustomField>
    <fullName>sugati__Unlock_Opportunit_approver_profile__c</fullName>
    <label>Unlock Opportunity approver profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>